@@ -1,7 +1,7 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2005-2005 Gentoo Technologies, Inc.
 
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.542 2005/12/23 22:32:57 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.543 2005/12/23 22:39:29 agaffney Exp $
 
 *GLI-0.3 (27 Oct 2005)
 
@@ -9,6 +9,7 @@
   src/GLIPortage.py:
   initial commit
   move some of portage function from GLIAT
+  flipped around a few function args
   src/GLIArchitectureTemplate.py:
   revamp install_packages() for new GLIPortage
 
